// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sending Domains Edit Page renders correctly 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Sending Domains",
      "to": "/account/sending-domains",
    }
  }
  empty={Object {}}
  title="Edit abcd.com"
>
  <div>
    <Connect(ReduxForm)
      domain={
        Object {
          "id": "abcd.com",
          "subaccount_id": 100,
          "tracking_domain": "track.me",
        }
      }
      id="abcd.com"
    />
    <Connect(ReduxForm)
      domain={
        Object {
          "id": "abcd.com",
          "subaccount_id": 100,
          "tracking_domain": "track.me",
        }
      }
    />
  </div>
</Page>
`;

exports[`Sending Domains Edit Page renders error banner correctly 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Sending Domains",
      "to": "/account/sending-domains",
    }
  }
  empty={Object {}}
  title="Edit abcd.com"
>
  <ApiErrorBanner
    errorDetails="error"
    message="Sorry, we seem to have had some trouble loading your Sending Domain."
    reload={[Function]}
  />
</Page>
`;

exports[`Sending Domains Edit Page renders loading correctly 1`] = `<Loading />`;
